KYAN-91 fix social links alignment on mobile

--- a/applications/common/frontend/src/atomic-design-system/03-organism/o.footer/o.footer.scss
+++ b/applications/common/frontend/src/atomic-design-system/03-organism/o.footer/o.footer.scss
@@ -66,6 +66,14 @@
     }
   }
 
+  .buttons {
+    justify-content: center;
+
+    @include breakpoint.media-breakpoint-medium {
+      justify-content: flex-start;
+    }  
+  }
+
   .icon {
     color: var(--color-grey--100) !important;
 
